--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/png" href="/images/favicon-bg-white.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Urban Company</title>
   </head>
