[PAGE]: completed service listing and service details page, created common service card

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Urban Company</title>
   </head>
-  <body class="bg-white dark:bg-gray-900 font-roboto">
+  <body class="font-roboto">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
